tests/files/fail/FunctionTypesWrongBuildin.krna


fn f() {
    let a: fn(string) -> string = fn(ref) ref
    applyJava(a);


}

fn applyJava(buildIn: java::util::function::Consumer<string>) {

}

